# gwassociation

./: .gitignore  Makefile  README.md  examples.py  gwPackage.ipynb  pyproject.toml  requirements.txt  setup.cfg  simple_test.py  test_gw_assoc.py  test_gwassociation.py  test_real_gw.py  working_example.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: minimal_script.py
gw_analysis_output/: results.json
src/gw_assoc/: __init__.py  cli.py  density.py  fov.py  ingest.py  plots.py  stats.py
src/gw_assoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gw_assoc/analysis/: los.py  odds.py  radial.py  spatial.py  temporal.py
src/gw_assoc/plotting/: __init__.py  distributions.py  skymap.py
src/gwassociation/: __init__.py  association.py  cli.py  density.py  ingest.py  plots.py  stats.py
src/gwassociation/analysis/: __init__.py  los.py  odds.py  radial.py  spatial.py  temporal.py
src/gwassociation/io/: __init__.py  skymap.py  transient.py
src/gwassociation/plotting/: distributions.py  skymap.py
src/gwassociation/utils/: healpix.py
test_data/: test_skymap.fits  test_transients.csv  test_transients.json
test_output/: results.json
tests/: conftest.py  test_IOmega_point.py  test_IdL_synthetic.py  test_distance_norm.py  test_dual_skymap_overlap.py  test_end_to_end_parity.py  test_prior_dl2.py
