# setup.cfg
[metadata]
name = gw-assoc
version = 0.0.1
description = GW–EM association odds: ingest GW posteriors/3D skymaps and EM transients, compute overlap integrals and posterior odds (optional lensing).
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
python_requires = >=3.10

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.25
    scipy>=1.11
    matplotlib>=3.8
    astropy>=6.0
    healpy>=1.16
    ligo.skymap>=1.0.6
    h5py>=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gw-assoc = gw_assoc.cli:main
