[metadata]
name = gwassociation
version = 0.3.0
description = Lightweight GW-EM association odds package for sky, distance, and time overlap analyses.
long_description = file: README.md
long_description_content_type = text/markdown
author = gwassociation contributors
python_requires = >=3.10

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.25
    scipy>=1.11
    matplotlib>=3.8
    astropy>=6.0
    astropy-healpix>=0.7
    click>=8.0

[options.packages.find]
where = src

[options.extras_require]
healpy =
    healpy>=1.16
ligo =
    ligo.skymap>=1.0.6
hdf5 =
    h5py>=3.10
dev =
    pytest>=7
    pytest-cov>=4
    black>=24
    flake8>=7
docs =
    sphinx>=7
    sphinx-rtd-theme>=2

[options.entry_points]
console_scripts =
    gwassociation = gwassociation.cli:main
